<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="温馨提示"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="12dp"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/write_tip1"
        android:textColor="@color/title_gray" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/write_tip2"
        android:textColor="@color/title_gray" />

    <TextView
        android:id="@+id/dialog_survery_write_tips_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_login"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/comfirm"
        android:textColor="@color/white" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/dialog_survery_write_tips_btn" />

</RelativeLayout>