<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height" >

        <ImageView
            android:id="@+id/change_password_img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:contentDescription="@null"
            android:src="@drawable/selector_btn_back" />

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password" />
    </RelativeLayout>

    <View
        android:id="@+id/doctor_img_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/title_gray" />

    <LinearLayout
        android:id="@+id/change_password_ll_old"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctor_img_line"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/left"
            android:gravity="center"
            android:text="@string/old_password"
            android:textColor="@color/title_gray" />

        <EditText
            android:id="@+id/change_passwrod_et_old"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:textColor="@color/title_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_ll_new"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_password_ll_old"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/left"
            android:gravity="center"
            android:text="@string/input_new_password"
            android:textColor="@color/title_gray" />

        <EditText
            android:id="@+id/change_passwrod_et_new"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:textColor="@color/title_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_ll_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_password_ll_new"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/left"
            android:gravity="center"
            android:text="@string/confirm_new_password"
            android:textColor="@color/title_gray" />

        <EditText
            android:id="@+id/change_passwrod_et_confirm"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:textColor="@color/title_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/change_password_btn_save"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/change_password_ll_confirm"
        android:layout_margin="40dp"
        android:background="@drawable/selector_btn_login"
        android:gravity="center"
        android:textColor="@color/white"
        android:clickable="true"
        android:text="@string/confirm_change" />

</RelativeLayout>