<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height" >

            <ImageView
                android:id="@+id/personal_img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/selector_btn_back" />

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/personal_info_manage" />
        </RelativeLayout>

        <View
            android:id="@+id/doctor_img_line"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/rl_title"
            android:background="@color/title_gray" />

        <!-- <ImageView
            android:id="@+id/personal_img_head_bg"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_below="@+id/doctor_img_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/"
            android:contentDescription="@null" /> -->

        <com.wemo.medical.widget.CircularImage
            android:id="@+id/personal_img_head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/doctor_img_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/personal_ll_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_img_head"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/left"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/title_gray" />

            <LinearLayout
                android:id="@+id/linearLayout_focus"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:orientation="vertical"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/personal_et_name"
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/right"
                android:gravity="center"
                android:hint=""
                android:paddingLeft="10dp"
                android:textColor="@color/title_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_ll_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_ll_name"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/left"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/title_gray" />

            <Spinner
                android:id="@+id/personal_spinner_sex"
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/right_arrow"
                android:textColor="@color/title_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_ll_birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_ll_sex"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/left"
                android:gravity="center"
                android:text="@string/birthday"
                android:textColor="@color/title_gray" />

            <TextView
                android:id="@+id/personal_btn_date"
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/right"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/title_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/personal_ll_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_ll_birthday"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/left"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="@color/title_gray" />

            <EditText
                android:id="@+id/personal_et_phone"
                android:layout_width="0dip"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/right"
                android:clickable="true"
                android:gravity="center"
                android:hint=""
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:maxLines="11"
                android:textColor="@color/title_gray" />
        </LinearLayout>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_alignParentRight="true"
            android:text="@string/change_handsetno_tips"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:layout_marginRight="36dp"
            android:layout_below="@+id/personal_ll_phone"/>

        <TextView
            android:id="@+id/personal_btn_save"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/personal_ll_phone"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_btn_login"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/personal_btn_save"/>
    </RelativeLayout>

</ScrollView>