<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height" >

        <ImageView
            android:id="@+id/healthy_risk_img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/selector_btn_back" />

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/locate_healthy_risk" />
    </RelativeLayout>

    <View
        android:id="@+id/doctor_img_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/title_gray" />

    <LinearLayout
        android:id="@+id/healthy_risk_ll_risk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctor_img_line"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="155dp"
            android:layout_weight="1"
            android:background="@drawable/medicalreport_bg_risk_pressed" >

            <ImageView
                android:id="@+id/healthy_risk_img2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/medicalreport_btn_risk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/healthy_risk_img2"
                android:layout_centerHorizontal="true"
                android:text="@string/healthy_reason_one"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="155dp"
            android:layout_weight="1"
            android:background="@drawable/medicalreport_bg_risk_normal" >

            <ImageView
                android:id="@+id/healthy_risk_img1"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/medicalreport_btn_risk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/healthy_risk_img1"
                android:layout_centerHorizontal="true"
                android:text="@string/healthy_reason_two"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="155dp"
            android:layout_weight="1"
            android:background="@drawable/medicalreport_bg_risk_normal" >

            <ImageView
                android:id="@+id/healthy_risk_img3"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@null"
                android:src="@drawable/medicalreport_btn_risk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/healthy_risk_img3"
                android:layout_centerHorizontal="true"
                android:text="@string/healthy_reason_three"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/healthy_risk_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/healthy_risk_ll_risk"
        android:orientation="vertical" >
    </LinearLayout>

    <!--
                 <TextView 
                android:id="@+id/healthy_risk_disadvance_risk"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/know_how_to_disadvance_risk"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/healthy_risk_draw"
                android:padding="10dp"
                android:background="@drawable/selector_btn_login"/>
    -->

</RelativeLayout>